--- a/src/app/layouts/default-layout/default-layout.component.html
+++ b/src/app/layouts/default-layout/default-layout.component.html
@@ -1,7 +1,15 @@
+<!-- <app-header></app-header>
+<div id="main-wrapper">
+  <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer> -->
+
+
+
 <app-header></app-header>
 
 <div id="main-wrapper">
   <router-outlet></router-outlet>
 </div>
-
 <app-footer></app-footer>
