--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,28 @@
-<div>
-    home
+<div class="container">
+    <section id="home">
+        <div style="background: url('../../assets/home_background.jpg');height: 600px;background-size: cover;" class="row align-items-center">
+
+            <div  class="col-lg-4">
+                <p style="color: red;" class="fs-1 fw-bolder">Just Do It Correctly</p>
+            </div>
+        </div>
+    </section>
 </div>
+<div class="container mt-5">
+    <section id="mobile-link " >
+        <div class="col-lg-12 text-center">
+            <h1>Let's Download</h1>
+        </div> 
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
+            
+            <div class="col-lg-6">
+                <img src="../../../assets/app_store.png" alt="app_store" class="h-100 w-100">
+            </div>
+            <div class="col-lg-6">
+                <img src="../../../assets/google_play.jpeg" alt="app_store"  class="h-100 w-100">
+            </div>
+        </div>
+    </section>
+</div>
+    
+    
