--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,3 +1,20 @@
-<div>
-    footer
-</div>
+<footer class="footer-distributed">
+			<div class="footer-right">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-linkedin"></i></a>
+				<a href="#"><i class="fab fa-github"></i></a>
+			</div>
+			<div class="footer-left">
+				<p class="footer-links">
+					<a class="link-1" href="#">Home</a>
+					<a class="link-1" href="#">Pricing</a>
+                    <a class="link-1" href="#">Privacy</a>
+					<a class="link-1" href="#">Cookies</a>
+					<a class="link-1" href="#">About</a>
+					<a class="link-1" href="#">Contact</a>
+				</p>
+				<p style=' padding-top: 15px;'>aifitnessasistant.com © 2021</p>
+			</div>
+</footer>
+
