--- a/src/app/layouts/footer/footer.component.scss
+++ b/src/app/layouts/footer/footer.component.scss
@@ -1,44 +1,92 @@
-.blockquote-footer {
-  margin-top: -1rem;
-  margin-bottom: 1rem;
-  font-size: 0.875em;
-  color: #6c757d;
-}
-.blockquote-footer::before {
-  content: "— ";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-footer {
-  background-color: #2a363b;
-  color: #fafafa;
-  padding: 2rem 0;
+.footer-distributed {
+  background-color: #212121;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 35px 80px;
 }
-footer a {
-  color: #fafafa;
-  text-decoration: none;
+
+.footer-distributed .footer-left p {
+  color: #8f9296;
+  font-size: 16px;
+  margin: 5px;
 }
-footer .title {
-  font-size: calc(1.275rem + 0.3vw);
+
+.footer-distributed p.footer-links {
+  font-size: 18px;
   font-weight: bold;
-  margin-bottom: 1rem;
+  color: #ffffff;
+  margin: 0 0 10px;
+  padding: 0;
+  transition: ease .25s;
 }
-@media (min-width: 1200px) {
-  footer .title {
-    font-size: 1.5rem;
+
+.footer-distributed p.footer-links a {
+  padding-right: 25px;
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+  transition: ease .25s;
+}
+
+.footer-distributed .footer-links a:before {
+  content: "·";
+  font-size: 20px;
+  left: 0;
+  color: #fff;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.footer-distributed .footer-links .link-1:before {
+  content: none;
+}
+
+.footer-distributed .footer-right {
+  float: right;
+  margin-top: 6px;
+  max-width: 300px;
+}
+
+.footer-distributed .footer-right a {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  background-color: #212121;
+  border-radius: 2px;
+  font-size: 45px;
+  margin: 5px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  transition:all .25s;
+}
+
+.footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+
+.footer-distributed p.footer-links a:hover{text-decoration:underline;}
+
+@media (max-width: 600px) {
+  .footer-distributed .footer-left, .footer-distributed .footer-right {
+    text-align: center;
   }
-}
-footer ul.menu {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-footer ul.menu > li {
-  margin: 0;
-  padding: 0;
-}
-footer ul.menu > li a {
-  color: #a5b7bf;
-}
-footer ul.menu > li a:hover {
-  color: black;
+  .footer-distributed .footer-right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+  .footer-distributed .footer-left p.footer-links {
+    line-height: 1.8;
+  }
 }
