--- a/src/app/pages/developers/developers.component.scss
+++ b/src/app/pages/developers/developers.component.scss
@@ -19,18 +19,20 @@
 }
 
 #outer_developers {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
+  align-items: center; 
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  text-align: center;
 }
  a {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     background-color: #212121;
     border-radius: 2px;
-    font-size: 45px;
-    // margin: 5px;
+    font-size: 65px;
+    margin: 5px;
     color: #ffffff;
     text-align: center;
     line-height: 35px;
