--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,27 +1,25 @@
 <div class="container">
     <section id="home">
-        <div style="background: url('../../assets/home_background.jpg');height: 600px;background-size: cover;" class="row align-items-center">
-
+        <div style="background: url('../../assets/home_background.jpg');height: 600px;background-size: cover;border-radius: 8%;" class="row align-items-center">
             <div  class="col-lg-4">
                 <p style="color: red;" class="fs-1 fw-bolder">Just Do It Correctly</p>
             </div>
         </div>
     </section>
 </div>
-<app-developers></app-developers>
 <app-corousel-slider></app-corousel-slider>
+<app-developers></app-developers>
 <div class="container mt-5">
     <section id="mobile-link " >
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12 text-center" style=' color: #f2f2f2;'>
             <h1>Let's Download</h1>
         </div> 
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
-            
-            <div class="col-lg-6">
-                <img src="../../../assets/app_store.png" alt="app_store" class="h-100 w-100">
+        <div class="row g-3 py-3 row-cols-1 row-cols-lg-2" style='align-items: center;'>
+            <div >
+                <a href=""><img src="../../../assets/download-appstore-button.png" alt="app_store" class="h-65 w-65"></a>
             </div>
-            <div class="col-lg-6">
-                <img src="../../../assets/google_play.jpeg" alt="app_store"  class="h-100 w-100">
+            <div >
+                <a href=""><img src="../../../assets/download-google_play-button.png" alt="app_store" class="h-65 w-65"></a>
             </div>
         </div>
     </section>
