contact page added & design improved

--- a/src/app/pages/developers/developers.component.scss
+++ b/src/app/pages/developers/developers.component.scss
@@ -19,6 +19,8 @@
 }
 
 #outer_developers {
+  margin-top: 150px;
+  margin-bottom: 150px;
   align-items: center; 
   justify-content: center;
   display: flex;
