--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,20 +9,26 @@
 </div>
 <app-corousel-slider></app-corousel-slider>
 <app-developers></app-developers>
-<div class="container mt-5">
-    <section id="mobile-link " >
-        <div class="col-lg-12 text-center" style=' color: #f2f2f2;'>
+<app-contact></app-contact>
+<div style="margin-top: 150px;padding-bottom: 75px;">
+    <section id="mobile-link" >
+        <!-- <div class="col-lg-12 text-center" style=' color: #f2f2f2;'>
             <h1>Let's Download</h1>
-        </div> 
-        <div class="row g-3 py-3 row-cols-1 row-cols-lg-2" style='align-items: center;'>
-            <div >
-                <a href=""><img src="../../../assets/download-appstore-button.png" alt="app_store" class="h-65 w-65"></a>
+        </div>  -->
+        <div style='text-align:center;align-items:center;'>
+            <div>
+                <a href=""><img style=" width:25%;height:25%;" src="../../../assets/download-appstore-button.png"></a>
             </div>
-            <div >
-                <a href=""><img src="../../../assets/download-google_play-button.png" alt="app_store" class="h-65 w-65"></a>
+            <div>
+                <a href=""><img style=" width:28.5%;height:32%;"src="../../../assets/download-google_play-button.png" ></a>
             </div>
         </div>
     </section>
 </div>
+
+
+
+
+
     
     
