--- a/src/app/pages/corousel-slider/corousel-slider.component.html
+++ b/src/app/pages/corousel-slider/corousel-slider.component.html
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container" style="margin-top: 150px;margin-bottom: 150px;">
     <br><br><br>
     <ngb-carousel #carousel [interval]="1000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
         <ng-template ngbSlide>
