--- a/src/app/pages/developers/developers.component.html
+++ b/src/app/pages/developers/developers.component.html
@@ -1,8 +1,8 @@
-<div id='outer_developers'>
+<div id='outer_developers' style="background-color: #242526;padding: 15px;">
     <div class='col-lg-3 mt-5'>
         <img src="../../../assets/img_avatar.png" id="image" /> 
         <p id="text">Alper Temel</p> 
-        <p id="text">Developer</p>
+        <p id="text">Researcher & Developer</p>
         <a href="#"><i class="fas fa-globe"></i></a>
         <a href="#"><i class="fab fa-linkedin"></i></a> 
         <a href="#"><i class="fas fa-envelope"></i></a> 
@@ -10,7 +10,7 @@
     <div class='col-lg-3 mt-5'>
         <img src="../../../assets/img_avatar.png" id="image" /> 
             <p id="text">Dogukan Ali Gundogan</p> 
-            <p id="text">Developer</p> 
+            <p id="text">Researcher & Developer</p> 
             <a href="#"><i class="fas fa-globe"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fas fa-envelope"></i></a> 
@@ -18,7 +18,7 @@
     <div class='col-lg-3 mt-5'>
         <img src="../../../assets/img_avatar2.png" id="image" /> 
         <p id="text">Ezgi Cetinkaya</p> 
-        <p id="text">Developer</p> 
+        <p id="text">Researcher & Developer</p> 
         <a href="#"><i class="fas fa-globe"></i></a>
         <a href="#"><i class="fab fa-linkedin"></i></a> 
         <a href="#"><i class="fas fa-envelope"></i></a> 
