--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,20 @@
 <div class="container">
     <section id="home">
-        <div style="background: url('../../assets/home_background.jpg');height: 600px;background-size: cover;border-radius: 8%;" class="row align-items-center">
-            <div  class="col-lg-4">
-                <p style="color: red;" class="fs-1 fw-bolder">Just Do It Correctly</p>
-            </div>
+        <div style="background: url('../../assets/home_background.jpg');height: 650px;background-size: cover;border-radius: 8%;" class="row align-items-center">
+            <!-- <div  class="col-lg-4">
+                <p style="color: #bf3030;" class="fs-1 fw-bolder">Just Do It Correctly</p>
+            </div> -->
         </div>
     </section>
+</div>
+<div class="col-lg-12 text-center" id="slogan" style='color: #f2f2f2;margin-top:150px;background-color:#bf3030;padding: 15px;'>
+    <h1>Feed off the power of artificial intelligence</h1>
 </div>
 <app-corousel-slider></app-corousel-slider>
 <app-developers></app-developers>
 <app-contact></app-contact>
-<div style="margin-top: 150px;padding-bottom: 75px;">
+<div id='download' style="padding-bottom: 125px;background-color: #242526;padding: 25px;">
     <section id="mobile-link" >
-        <!-- <div class="col-lg-12 text-center" style=' color: #f2f2f2;'>
-            <h1>Let's Download</h1>
-        </div>  -->
         <div style='text-align:center;align-items:center;'>
             <div>
                 <a href=""><img style=" width:25%;height:25%;" src="../../../assets/download-appstore-button.png"></a>
@@ -25,6 +25,7 @@
         </div>
     </section>
 </div>
+<div style="padding-bottom:75px;"></div>
 
 
 
