--- a/src/app/pages/corousel-slider/corousel-slider.component.html
+++ b/src/app/pages/corousel-slider/corousel-slider.component.html
@@ -6,7 +6,7 @@
             <div class="col-12 col-lg-5 pr-0">
                 <div class="carouselImg">
                     <div class="imgOut">
-                        <div class="imgimg"  style="background: url('iphone2.png') no-repeat center;"></div>
+                        <div class="imgimg"  style="background: url('../../../assets/iphone2.png') no-repeat center;"></div>
                     </div>
                 </div>
             </div>
@@ -26,7 +26,7 @@
                 <div class="col-12 col-lg-5 pr-0">
                     <div class="carouselImg">
                         <div class="imgOut">
-                            <div class="imgimg"  style="background: url('İPHONEApp.PNG') no-repeat center;"></div>
+                            <div class="imgimg"  style="background: url('../../../assets/İPHONEApp.PNG') no-repeat center;"></div>
                         </div>
                     </div>
                 </div>
