--- a/src/app/pages/developers/developers.component.scss
+++ b/src/app/pages/developers/developers.component.scss
@@ -19,6 +19,8 @@
 }
 
 #outer_developers {
+  background-color: #242526;
+  padding: 15px;
   margin-bottom: 75px;
   margin-top: 150px;
   margin-bottom: 150px;
