--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <section id="home">
-        <div style="background: url('../../assets/home_background.jpg');height: 650px;background-size: cover;border-radius: 8%;" class="row align-items-center">
+        <div style="background: url({{main_image_path}});height: 650px;background-size: cover;border-radius: 8%;" class="row align-items-center">
             <!-- <div  class="col-lg-4">
                 <p style="color: #bf3030;" class="fs-1 fw-bolder">Just Do It Correctly</p>
             </div> -->
@@ -8,19 +8,19 @@
     </section>
 </div>
 <div class="col-lg-12 text-center" id="slogan" style='color: #f2f2f2;margin-top:150px;background-color:#bf3030;padding: 15px;'>
-    <h1>Feed off the power of artificial intelligence</h1>
+    <h1>{{slogan}}</h1>
 </div>
 <app-corousel-slider></app-corousel-slider>
 <app-developers></app-developers>
 <app-contact></app-contact>
-<div id='download' style="padding-bottom: 125px;background-color: #242526;padding: 25px;">
+<div id='download' style="background-color: #242526;padding: 25px;">
     <section id="mobile-link" >
         <div style='text-align:center;align-items:center;'>
             <div>
-                <a href=""><img style=" width:25%;height:25%;" src="../../../assets/download-appstore-button.png"></a>
+                <a href="{{downlod_ios_href}}"><img style=" width:25%;height:25%;" src="{{download_ios_path}}"></a>
             </div>
             <div>
-                <a href=""><img style=" width:28.5%;height:32%;"src="../../../assets/download-google_play-button.png" ></a>
+                <a href="{{downlod_android_href}}"><img style=" width:28.5%;height:32%;"src="{{download_android_path}}" ></a>
             </div>
         </div>
     </section>
