--- a/src/app/layouts/footer/footer.component.scss
+++ b/src/app/layouts/footer/footer.component.scss
@@ -7,6 +7,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+.cpy_name {
+  padding-top: 15px;
+}
+
 .footer-distributed {
   background-color: #212121;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
@@ -30,6 +34,7 @@
   margin: 0 0 10px;
   padding: 0;
   transition: ease .25s;
+  display: inline-block;
 }
 
 .footer-distributed p.footer-links a {
